Grammar/output/TigerParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g 2012-03-06 04:48:08

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using TigerNET.AST;


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:45:30")]
[System.CLSCompliant(false)]
public partial class TigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "NIL", "Minus", "Assign", "LParent", "RParent", "LCorch", "RCorch", "LKey", "RKey", "If", "Then", "Else", "Break", "While", "Do", "For", "To", "In", "End", "Let", "Comma", "DotComma", "Dot", "Plus", "Mult", "Div", "Equals", "NotEquals", "GThan", "LThan", "GEThan", "LEThan", "And", "Or", "Type", "ArrayOf", "Var", "Function", "Quotes", "Underscore", "Of", "DIGIT", "INT_CONST", "CHAR", "SPACE", "ESC", "STRING_CONST", "LETTER", "ID", "COMMENTS", "':'"
	};
	public const int EOF=-1;
	public const int T__54=54;
	public const int NIL=4;
	public const int Minus=5;
	public const int Assign=6;
	public const int LParent=7;
	public const int RParent=8;
	public const int LCorch=9;
	public const int RCorch=10;
	public const int LKey=11;
	public const int RKey=12;
	public const int If=13;
	public const int Then=14;
	public const int Else=15;
	public const int Break=16;
	public const int While=17;
	public const int Do=18;
	public const int For=19;
	public const int To=20;
	public const int In=21;
	public const int End=22;
	public const int Let=23;
	public const int Comma=24;
	public const int DotComma=25;
	public const int Dot=26;
	public const int Plus=27;
	public const int Mult=28;
	public const int Div=29;
	public const int Equals=30;
	public const int NotEquals=31;
	public const int GThan=32;
	public const int LThan=33;
	public const int GEThan=34;
	public const int LEThan=35;
	public const int And=36;
	public const int Or=37;
	public const int Type=38;
	public const int ArrayOf=39;
	public const int Var=40;
	public const int Function=41;
	public const int Quotes=42;
	public const int Underscore=43;
	public const int Of=44;
	public const int DIGIT=45;
	public const int INT_CONST=46;
	public const int CHAR=47;
	public const int SPACE=48;
	public const int ESC=49;
	public const int STRING_CONST=50;
	public const int LETTER=51;
	public const int ID=52;
	public const int COMMENTS=53;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, true, false, false, false, false, 
				false, false, false, false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public TigerParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public TigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{

		OnCreated();
	}
		

	public override string[] TokenNames { get { return TigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g"; } }


	private IList<string> _errors = new List<string>();
	public IList<string> Errors { get { return _errors; }}

	public override void ReportError(RecognitionException e) {
		Errors.Add(e.ToString());
	}	


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules

	partial void Enter_prog();
	partial void Leave_prog();

	// $ANTLR start "prog"
	// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:94:8: public prog returns [ExpressionNode node] : e= expr_or EOF ;
	[GrammarRule("prog")]
	public ExpressionNode prog()
	{
		Enter_prog();
		EnterRule("prog", 1);
		TraceIn("prog", 1);
		ExpressionNode node = default(ExpressionNode);

		ExpressionNode e = default(ExpressionNode);

		try { DebugEnterRule(GrammarFileName, "prog");
		DebugLocation(94, 86);
		try
		{
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:94:43: (e= expr_or EOF )
			DebugEnterAlt(1);
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:94:45: e= expr_or EOF
			{
			DebugLocation(94, 47);
			PushFollow(Follow._expr_or_in_prog577);
			e=expr_or();
			PopFollow();
			if (state.failed) return node;
			DebugLocation(94, 57);
			Match(input,EOF,Follow._EOF_in_prog579); if (state.failed) return node;
			DebugLocation(94, 61);
			if ( state.backtracking == 0 )
			{
				 node = e; 
			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("prog", 1);
			LeaveRule("prog", 1);
			Leave_prog();
		}
		DebugLocation(94, 86);
		} finally { DebugExitRule(GrammarFileName, "prog"); }
		return node;

	}
	// $ANTLR end "prog"


	partial void Enter_expr_or();
	partial void Leave_expr_or();

	// $ANTLR start "expr_or"
	// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:95:1: expr_or returns [ExpressionNode node] : left= expr_and ( Or right= expr_or )? ;
	[GrammarRule("expr_or")]
	private ExpressionNode expr_or()
	{
		Enter_expr_or();
		EnterRule("expr_or", 2);
		TraceIn("expr_or", 2);
		ExpressionNode node = default(ExpressionNode);

		ExpressionNode left = default(ExpressionNode);
		ExpressionNode right = default(ExpressionNode);

		try { DebugEnterRule(GrammarFileName, "expr_or");
		DebugLocation(95, 3);
		try
		{
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:95:39: (left= expr_and ( Or right= expr_or )? )
			DebugEnterAlt(1);
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:95:41: left= expr_and ( Or right= expr_or )?
			{
			DebugLocation(95, 46);
			PushFollow(Follow._expr_and_in_expr_or596);
			left=expr_and();
			PopFollow();
			if (state.failed) return node;
			DebugLocation(96, 1);
			if ( state.backtracking == 0 )
			{

				/* Left */
				node = left; 

			}
			DebugLocation(100, 1);
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:100:1: ( Or right= expr_or )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			int LA1_0 = input.LA(1);

			if ((LA1_0==Or))
			{
				alt1=1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:100:2: Or right= expr_or
				{
				DebugLocation(100, 2);
				Match(input,Or,Follow._Or_in_expr_or602); if (state.failed) return node;
				DebugLocation(100, 11);
				PushFollow(Follow._expr_or_in_expr_or608);
				right=expr_or();
				PopFollow();
				if (state.failed) return node;
				DebugLocation(101, 1);
				if ( state.backtracking == 0 )
				{

					var orOperatorNode = new OrOperatorNode(node, right);
					node = orOperatorNode;

				}

				}
				break;

			}
			} finally { DebugExitSubRule(1); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("expr_or", 2);
			LeaveRule("expr_or", 2);
			Leave_expr_or();
		}
		DebugLocation(104, 3);
		} finally { DebugExitRule(GrammarFileName, "expr_or"); }
		return node;

	}
	// $ANTLR end "expr_or"


	partial void Enter_expr_and();
	partial void Leave_expr_and();

	// $ANTLR start "expr_and"
	// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:105:1: expr_and returns [ExpressionNode node] : left= expr_logical ( And right= expr_and )? ;
	[GrammarRule("expr_and")]
	private ExpressionNode expr_and()
	{
		Enter_expr_and();
		EnterRule("expr_and", 3);
		TraceIn("expr_and", 3);
		ExpressionNode node = default(ExpressionNode);

		ExpressionNode left = default(ExpressionNode);
		ExpressionNode right = default(ExpressionNode);

		try { DebugEnterRule(GrammarFileName, "expr_and");
		DebugLocation(105, 2);
		try
		{
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:105:39: (left= expr_logical ( And right= expr_and )? )
			DebugEnterAlt(1);
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:105:41: left= expr_logical ( And right= expr_and )?
			{
			DebugLocation(105, 46);
			PushFollow(Follow._expr_logical_in_expr_and627);
			left=expr_logical();
			PopFollow();
			if (state.failed) return node;
			DebugLocation(106, 1);
			if ( state.backtracking == 0 )
			{

				node = left;

			}
			DebugLocation(109, 1);
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:109:1: ( And right= expr_and )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, decisionCanBacktrack[2]);
			int LA2_0 = input.LA(1);

			if ((LA2_0==And))
			{
				alt2=1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:109:2: And right= expr_and
				{
				DebugLocation(109, 2);
				Match(input,And,Follow._And_in_expr_and634); if (state.failed) return node;
				DebugLocation(109, 12);
				PushFollow(Follow._expr_and_in_expr_and640);
				right=expr_and();
				PopFollow();
				if (state.failed) return node;
				DebugLocation(110, 1);
				if ( state.backtracking == 0 )
				{

					var andOperatorNode = new AndOperatorNode(node, right);
					node = andOperatorNode;

				}

				}
				break;

			}
			} finally { DebugExitSubRule(2); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("expr_and", 3);
			LeaveRule("expr_and", 3);
			Leave_expr_and();
		}
		DebugLocation(114, 2);
		} finally { DebugExitRule(GrammarFileName, "expr_and"); }
		return node;

	}
	// $ANTLR end "expr_and"


	partial void Enter_expr_logical();
	partial void Leave_expr_logical();

	// $ANTLR start "expr_logical"
	// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:115:1: expr_logical returns [ExpressionNode node] : left= expr_arithm ( ( ( Equals ) | NotEquals | GThan | LThan | GEThan | LEThan ) right= expr_logical )? ;
	[GrammarRule("expr_logical")]
	private ExpressionNode expr_logical()
	{
		Enter_expr_logical();
		EnterRule("expr_logical", 4);
		TraceIn("expr_logical", 4);
		ExpressionNode node = default(ExpressionNode);

		ExpressionNode left = default(ExpressionNode);
		ExpressionNode right = default(ExpressionNode);

		RelationalBinaryOperatorNode n = null;
		try { DebugEnterRule(GrammarFileName, "expr_logical");
		DebugLocation(115, 3);
		try
		{
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:117:2: (left= expr_arithm ( ( ( Equals ) | NotEquals | GThan | LThan | GEThan | LEThan ) right= expr_logical )? )
			DebugEnterAlt(1);
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:117:4: left= expr_arithm ( ( ( Equals ) | NotEquals | GThan | LThan | GEThan | LEThan ) right= expr_logical )?
			{
			DebugLocation(117, 9);
			PushFollow(Follow._expr_arithm_in_expr_logical668);
			left=expr_arithm();
			PopFollow();
			if (state.failed) return node;
			DebugLocation(118, 1);
			if ( state.backtracking == 0 )
			{

				node = left; 

			}
			DebugLocation(121, 2);
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:121:2: ( ( ( Equals ) | NotEquals | GThan | LThan | GEThan | LEThan ) right= expr_logical )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, decisionCanBacktrack[4]);
			switch (input.LA(1))
			{
			case Equals:
				{
				alt4=1;
				}
				break;
			case NotEquals:
				{
				alt4=1;
				}
				break;
			case GThan:
				{
				alt4=1;
				}
				break;
			case LThan:
				{
				alt4=1;
				}
				break;
			case GEThan:
				{
				alt4=1;
				}
				break;
			case LEThan:
				{
				alt4=1;
				}
				break;
			}

			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:123:2: ( ( Equals ) | NotEquals | GThan | LThan | GEThan | LEThan ) right= expr_logical
				{
				DebugLocation(123, 2);
				// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:123:2: ( ( Equals ) | NotEquals | GThan | LThan | GEThan | LEThan )
				int alt3=6;
				try { DebugEnterSubRule(3);
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				switch (input.LA(1))
				{
				case Equals:
					{
					alt3=1;
					}
					break;
				case NotEquals:
					{
					alt3=2;
					}
					break;
				case GThan:
					{
					alt3=3;
					}
					break;
				case LThan:
					{
					alt3=4;
					}
					break;
				case GEThan:
					{
					alt3=5;
					}
					break;
				case LEThan:
					{
					alt3=6;
					}
					break;
				default:
					{
						if (state.backtracking>0) {state.failed=true; return node;}
						NoViableAltException nvae = new NoViableAltException("", 3, 0, input);

						DebugRecognitionException(nvae);
						throw nvae;
					}
				}

				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:123:3: ( Equals )
					{
					DebugLocation(123, 3);
					// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:123:3: ( Equals )
					DebugEnterAlt(1);
					// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:123:4: Equals
					{
					DebugLocation(123, 4);
					Match(input,Equals,Follow._Equals_in_expr_logical681); if (state.failed) return node;
					DebugLocation(124, 2);
					if ( state.backtracking == 0 )
					{

							n = new EqualOperatorNode() { Left = node };
							
					}

					}


					}
					break;
				case 2:
					DebugEnterAlt(2);
					// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:127:2: NotEquals
					{
					DebugLocation(127, 2);
					Match(input,NotEquals,Follow._NotEquals_in_expr_logical692); if (state.failed) return node;
					DebugLocation(128, 2);
					if ( state.backtracking == 0 )
					{

							n = new NotEqualOperatorNode() { Left = node };
							
					}

					}
					break;
				case 3:
					DebugEnterAlt(3);
					// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:131:2: GThan
					{
					DebugLocation(131, 2);
					Match(input,GThan,Follow._GThan_in_expr_logical701); if (state.failed) return node;
					DebugLocation(131, 8);
					if ( state.backtracking == 0 )
					{

							n = new GreatherOperatorNode() { Left = node };
							
					}

					}
					break;
				case 4:
					DebugEnterAlt(4);
					// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:134:2: LThan
					{
					DebugLocation(134, 2);
					Match(input,LThan,Follow._LThan_in_expr_logical708); if (state.failed) return node;
					DebugLocation(135, 2);
					if ( state.backtracking == 0 )
					{

							n = new LowerOperatorNode() { Left = node };
							
					}

					}
					break;
				case 5:
					DebugEnterAlt(5);
					// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:138:2: GEThan
					{
					DebugLocation(138, 2);
					Match(input,GEThan,Follow._GEThan_in_expr_logical717); if (state.failed) return node;
					DebugLocation(139, 2);
					if ( state.backtracking == 0 )
					{

							n = new GreatherEqualOperatorNode() { Left = node };
							
					}

					}
					break;
				case 6:
					DebugEnterAlt(6);
					// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:142:2: LEThan
					{
					DebugLocation(142, 2);
					Match(input,LEThan,Follow._LEThan_in_expr_logical726); if (state.failed) return node;
					DebugLocation(143, 2);
					if ( state.backtracking == 0 )
					{

							n = new LowerEqualOperatorNode() { Left = node };	
							
					}

					}
					break;

				}
				} finally { DebugExitSubRule(3); }

				DebugLocation(146, 10);
				PushFollow(Follow._expr_logical_in_expr_logical739);
				right=expr_logical();
				PopFollow();
				if (state.failed) return node;
				DebugLocation(147, 2);
				if ( state.backtracking == 0 )
				{

						n.Right = right;
						node = n;
						
				}

				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("expr_logical", 4);
			LeaveRule("expr_logical", 4);
			Leave_expr_logical();
		}
		DebugLocation(152, 3);
		} finally { DebugExitRule(GrammarFileName, "expr_logical"); }
		return node;

	}
	// $ANTLR end "expr_logical"


	partial void Enter_expr_arithm();
	partial void Leave_expr_arithm();

	// $ANTLR start "expr_arithm"
	// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:153:1: expr_arithm returns [ExpressionNode node] : left= expr_factor ( ( ( Plus ) | Minus ) right= expr_arithm )? ;
	[GrammarRule("expr_arithm")]
	private ExpressionNode expr_arithm()
	{
		Enter_expr_arithm();
		EnterRule("expr_arithm", 5);
		TraceIn("expr_arithm", 5);
		ExpressionNode node = default(ExpressionNode);

		ExpressionNode left = default(ExpressionNode);
		ExpressionNode right = default(ExpressionNode);

		ArithmeticalBinaryOperatorNode n = null;
		try { DebugEnterRule(GrammarFileName, "expr_arithm");
		DebugLocation(153, 3);
		try
		{
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:155:2: (left= expr_factor ( ( ( Plus ) | Minus ) right= expr_arithm )? )
			DebugEnterAlt(1);
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:155:4: left= expr_factor ( ( ( Plus ) | Minus ) right= expr_arithm )?
			{
			DebugLocation(155, 9);
			PushFollow(Follow._expr_factor_in_expr_arithm770);
			left=expr_factor();
			PopFollow();
			if (state.failed) return node;
			DebugLocation(155, 23);
			if ( state.backtracking == 0 )
			{
				node = left;
			}
			DebugLocation(156, 2);
			// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:156:2: ( ( ( Plus ) | Minus ) right= expr_arithm )?
			int alt6=2;
			try { DebugEnterSubRule(6);
			try { DebugEnterDecision(6, decisionCanBacktrack[6]);
			int LA6_0 = input.LA(1);

			if ((LA6_0==Plus))
			{
				alt6=1;
			}
			else if ((LA6_0==Minus))
			{
				alt6=1;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:157:2: ( ( Plus ) | Minus ) right= expr_arithm
				{
				DebugLocation(157, 2);
				// C:\\Users\\Oscar\\Documents\\Visual Studio 2010\\Projects\\TigerNET\\Grammar\\Tiger.g:157:2: ( ( Plus ) | Minus )
				int alt5=2;
				try { DebugEnterSubRule(5);
				try { DebugEnterDecision(5, decisionCanBacktrack[5]);
				int LA5_0 = input.LA(1);

				if ((LA5_0==Plus))
				{
					alt5=1;
				}
				else if ((LA5_0==Minus))
				{
					alt5=2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return node;}
					NoViableAltException nvae = new NoViableAltException("", 5, 0, input);
